tests/NormalTests/paczka1/fuzzy1/91919114.err
Error in line 3: YpTH3 A784 59,2
Error in line 6: i4I A421 47,1
Error in line 16: i4I A590 278,7
Error in line 20: A784 A590 39,1
Error in line 33: lIOVbjbhR A590 41,2
Error in line 36: F95M2YHm A784 4,8
Error in line 25: YpTH3 S126 31,5
